--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagen">
-                <!--Aqui vai a imagem nas CSS-->
+            <div id="imagem">
+                
             </div>
             <div id="formulario">
                 <h1>Login</h1>
